# OpenVerifiableLLM

./: .coderabbit.yaml  .gitignore  README.md  bad.xml  benchmark_custom.py  fix_issue_37.md  manifest.json  pyproject.toml  reproducible_hash.txt  requirements.txt  test.xml
.github/workflows/: ci.yml  reproducibility-tests.yml
examples/: demo_util.py  sample_wiki.py  sample_wiki.xml.bz2
experiments/: README.md  utils.py
experiments/checkpoint_reproducibility/: checkpoint.pt  run_experiment.py  train_tiny_model.py  utils.py  verify_hash_consistency.py
experiments/data_subset/: sample_wiki_generate.py
experiments/dataset_subset_tests/: wikipedia_subset.py
experiments/determinism_tests/: seed_replay_test.py
experiments/merkle_verification/: test_merkle.py
experiments/preprocessing_determinism/: test_preprocessing.py
experiments/verifiable_finetuning/: .gitignore  README.md  finetune.py  manifest.py  train_base.py  utils.py
openverifiablellm/: __init__.py  _hashing.py  benchmark.py  config.py  contamination.py  environment.py  manifest_chain.py  pipeline.py  tokenizer.py  utils.py  verify.py
openverifiablellm/eval/: __init__.py  base.py  bias.py  (+2 more)
scripts/: benchmark.py  download_dump.py  generate_manifest.py  hash_utils.py  preprocess.py  test_reproducibility.py
tests/: benchmark.py  test_bpebase.py  test_contamination.py  test_dataset_hash.py  test_directory_hash.py  test_eval.py  test_factual_eval.py  test_generate_manifest.py  test_merkle.py  test_reproducibility_pipeline.py  test_sentencepiece.py  test_tokenizer.py  test_util.py  test_verify.py
(+11 files in other folders)
