[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openverifiablellm"
version = "0.1.0"
description = "Deterministic dataset hashing utilities for verifiable LLM training"
authors = [
    {name = "Varshini"}
]
requires-python = ">=3.9"

dependencies = [
    "datasets",
    "defusedxml",
    "sentencepiece",
    "tokenizers==0.15.2"
]

# Intentionally duplicated from [dependency-groups] below.
# pip uses this section; uv/PEP 735 uses [dependency-groups]. Keep both in sync.
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.15.4",
]

[tool.setuptools.packages.find]
include = ["openverifiablellm*"]

# Intentionally duplicated from [project.optional-dependencies] above.
# uv/PEP 735 uses this section; pip uses [project.optional-dependencies]. Keep both in sync.
[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:sentencepiece",
    "ignore:builtin type Swig:DeprecationWarning",
    "ignore:builtin type swigvarlink:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
